--- a/src/README
+++ b/src/README
@@ -1,1 +1,2 @@
 Initial python code templates to explore building a controller for hovering a quadcopter. 
+Note: XBox controller was disabled in this project.
