--- a/src/vertical-climb-hover/README
+++ b/src/vertical-climb-hover/README
@@ -1,2 +1,2 @@
 Initial python code template to explore building a controller for hovering a quadcopter. 
-Note: XBox controller was disabled in this project.
+Note: XBox controller was disabled in for this project.
