--- a/src/hector_lpv_mpc/README
+++ b/src/hector_lpv_mpc/README
@@ -1,2 +1,2 @@
 Python code for hector quadcopter with LPV MPC controller
-Note: XBox controller was disabled in this project.
+Note: XBox controller was disabled in this project and drag variable set to 1.
